# fshare

./: .gitignore  LINCESE  README.md  pyproject.toml
src/fshare/: __init__.py  cli.py  filemanager.py  index.html  index.js  main.py
