[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fshare"
version = "1.1.2"
authors = [
  { name="Stevo Mitric", email="stevomitric2000@gmail.com" },
]
maintainers = [
  { name="Stevo Mitric", email="stevomitric2000@gmail.com" },
]
description = "A python package that serves as an easy file sharing application over local network"
readme = "README.md"
keywords = ["file", "share"]
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Flask",
]

[project.urls]
"Homepage" = "https://github.com/stevomitric/fshare"
"Bug Tracker" = "https://github.com/stevomitric/fshare/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
where = ["src"]
fshare = ["*.html", "*.js"]

[tool.poetry.dependencies]
flask = { version = "*", python = ">=3.0" }

[tool.poetry.scripts]
fshare = 'fshare.main:run'